--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="button"></color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#FFFF5722</color>
+    <color name="grey">#D6D4D4</color>
+    <color name="dark_grey">#8E8E8E</color>
+
+<!--    <color name="button"></color>-->
 </resources>
