--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,5 +15,23 @@
 <!--        <item name="android:windowNoTitle">true</item>-->
 <!--        <item name="android:windowActionBar">false</item>-->
 <!--        <item name="android:windowFullscreen">true</item>-->
+        <item name="android:windowFullscreen">false</item>
+    </style>
+    <style name="Theme.Jopa.OrangeActionBar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+        <item name="android:actionBarItemBackground" tools:targetApi="l">@color/orange</item>
+        <!--        <item name="android:windowNoTitle">false</item>-->
+        <!--        <item name="android:windowActionBar">true</item>-->
+        <!--        <item name="android:windowFullscreen">false</item>-->
     </style>
 </resources>
