--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -15,7 +15,6 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="70dp"
-        android:onClick="login"
         android:text="Login"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
@@ -45,6 +44,7 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
+        android:text="admin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -56,6 +56,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Password"
+        android:text="admin"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
@@ -68,4 +69,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
