--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="orange">#FFFF5722</color>
+    <color name="orange">#FF5722</color>
+    <color name="dark_orange">#BF6143</color>
+    <color name="light_orange">#FF8159</color>
     <color name="grey">#D6D4D4</color>
     <color name="dark_grey">#8E8E8E</color>
 
